home and about work

--- a/index.html
+++ b/index.html
@@ -2,13 +2,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-    <h1>Homepage of our Assignment 1</h1>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error impedit officiis amet ipsam molestias eligendi nihil accusamus dolorem corrupti tenetur!</p>
-<!-- add commit push -->
+<ul>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/About.html">About</a></li>
+    <li><a href="/Contact.html">Contact</a></li>
+    <li><a href="/Product.html">Product</a></li>
+    <li><a href="/address.html">Address</a></li>
+</ul>
+<img src="/bag.jpg" alt="" height="500" width="500" class="imgbag">
+<img src="/dress.jpg" alt="" class="bagg">
+<p class="title">Belladonna</p>
+<section id="stye"><p>Style With Elegance</p></section>
+<div class="def">
+    <p>At Belladonna, we believe every woman deserves to look and feel her best, and we are here to help you achieve that effortlessly. Discover our exclusive collection of chic and elegant clothing designed to cater to every aspect of your life, from casual outings to sophisticated soirées.
+        <!-- join our fashion-forward community and enjoy exclusive benefits like personalized styling advice, early access to new arrivals, and special member-only discounts. At Belladonna, we believe in celebrating every woman's unique beauty and individuality. Let us help you create a wardrobe that not only looks fabulous but also feels amazing. Shop with us today and transform your fashion journey into an unforgettable experience! -->
 
+
+    </p>
+    <p>Whether you’re revamping your entire wardrobe or looking for that perfect statement piece, Belladonna is your go-to destination. Shop now and step out in style!
+
+        </p>
+</div>
 </body>
 </html>
+<!-- scover an array of fashionable outfits and exquisite accessories that blend sophistication with comfort. Our collection is meticulously curated to cater to the modern woman who values elegance and practicality. From chic dresses and stylish blouses to statement jewelry and luxurious handbags, each item is designed to elevate your style and enhance your confidence -->
