--- a/Contact.html
+++ b/Contact.html
@@ -4,14 +4,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    
 </head>
 <body>
-    <ul>
+    <nav> <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/About.html">About</a></li>
         <li><a href="/Contact.html">Contact</a></li>
         <li><a href="/Product.html">Product</a></li>
         <li><a href="/address.html">Address</a></li>
-    </ul>
+    </ul></nav>
+   <section id="contacts"> <a href="https://www.facebook.com/profile.php?id=100094556935941" ><i class="fab fa-facebook"></i></a>
+    <a href="https://web.whatsapp.com/" class="wp"><i class="fab fa-whatsapp" ></i></a>
+    <a href="https://telegram.org/"><i class="fab fa-telegram"></i></a></section>
 </body>
 </html>
