--- a/Product.html
+++ b/Product.html
@@ -6,12 +6,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
+    <nav> <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/About.html">About</a></li>
         <li><a href="/Contact.html">Contact</a></li>
         <li><a href="/Product.html">Product</a></li>
         <li><a href="/address.html">Address</a></li>
-    </ul>
+    </ul></nav>
+    <div class="prdct">
+        <img src="/bag2.jpg" id="one">
+        <img src="/bag3.jpg" id="two">
+        <img src="/bag4.jpg" id="three">
+        <img src="/bag1.jpg" id="four">
+    </div>
 </body>
 </html>
