--- a/address.html
+++ b/address.html
@@ -6,12 +6,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
+    <nav> <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/About.html">About</a></li>
         <li><a href="/Contact.html">Contact</a></li>
         <li><a href="/Product.html">Product</a></li>
         <li><a href="/address.html">Address</a></li>
-    </ul>
+    </ul></nav>
+  <div class="mapgrid">  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.1420865011637!2d90.42166437602432!3d23.81354598634784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c62fb95f16c1%3A0xb333248370356dee!2sJamuna%20Future%20Park!5e0!3m2!1sen!2sbd!4v1717809757900!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+
+    <p class="maplocation">Please visit the Google map link to get the location.</p>
+    <p class="maplocation">Jamuna Future Park is a shopping mall in Dhaka, Bangladesh. It was inaugurated on 6 September 2013. Construction began in 2002, by Jamuna Builders Ltd., a subsidiary of the Jamuna Group and the exterior was completed in 2008. It has a total floor area of 4,100,000 square feet.</p> 
+<img src="/jamuna.png" class="market"></div>
+
 </body>
 </html>
