--- a/Product.html
+++ b/Product.html
@@ -13,11 +13,35 @@
         <li><a href="/Product.html">Product</a></li>
         <li><a href="/address.html">Address</a></li>
     </ul></nav>
+    <p class="note">Please Hover over the picture to see the paragraph and description of the product</p>
+
     <div class="prdct">
-        <img src="/bag2.jpg" id="one">
-        <img src="/bag3.jpg" id="two">
-        <img src="/bag4.jpg" id="three">
-        <img src="/bag1.jpg" id="four">
+        <div class="prodactitem">
+            <img src="/bag2.jpg" alt="">
+                <p class="description">Model No: bag123 <br>price:1500Tk <br>Discount:10%</p>
+            </img>
+        </div>
+        <div class="prodactitem">
+            <img src="/bag3.jpg" alt="">
+                <p class="description">Model No: bag1xy12 <br>price:2300Tk <br>Discount:5%</p>
+            </img>
+        </div>
+        <div class="prodactitem">
+            <img src="/bag4.jpg" alt="">
+                <p class="description">Model No: bag12TY3 <br>price:3700Tk <br>Discount:20%</p>
+            </img>
+        </div>
+        <div class="prodactitem">
+            <img src="/bag1.jpg" alt="">
+                <p class="description">Model No: bagSZ123 <br>price:780Tk <br>Discount:15%</p>
+            </img>
+        </div>
+        <!-- <img src="/bag2.jpg" >
+        <img src="/bag3.jpg" >
+        <img src="/bag4.jpg" >
+        <img src="/bag1.jpg" > -->
     </div>
+
+
 </body>
 </html>
